--- a/examen/FrmAltaVenta.resx
+++ b/examen/FrmAltaVenta.resx
@@ -123,16 +123,16 @@
   <metadata name="ColumnaCorreo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ColumnID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ColumnaNombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Nombre.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ColumnaPrecio.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Precio.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="ColumnaCant.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="Cant.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -161,20 +161,19 @@
   </data>
   <data name="btnCrearVenta.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAM4AAADOAZT+k6AAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAChElEQVRYR+2XTYhNYRjHz9RQGkNTaGQaFrOYhaTsLCaxHMlKVsjCR1GyUkopdorJpLGwlWywId9i
-        JFIkiaiJjY8SishH1+9//d/be8977qW5Z8xm3vo17/N/nnne/znvuecjq1QqdTAG4C0oGC8H8n0bkQpZ
-        NgzXYMU4eQFqtDXfu4hUyLIROJXX/xXGQ9DkJwwW1cSkQnkGxGdYVlQXSIVyDYjXsLCoVqRC+QbEE+gq
-        rE+EiTEgbsD0pD4RWjdwC8KiefYl9YnQuoEFsLYAGRtJ6hOhRQONUE/1TvREmCwDjB7YC4/gGRwpGfVU
-        b63RU2eA0QbPQcH/QGu1xQb6nIj5BudhDxyHxxDnr0I4uvfW7js+4zhfezvS+mID/VFCvIRO5QKMXc4F
-        lkS5E9ZGHc+FX9bEUusXI62/qjmRN7DD+kHQrfQCPIWQH3N+pf+uAU20aLe1e9ZeOZ4DP6yJpgbWWd8E
-        H6zFDDmvK7sbZsAXkLjNuf2Ojzne4jjQ1MAdmOlcJxyC2P0q0IX7Dja7Luz7JcfLHa92fMVxoKkB8Qbk
-        epprdDY0+SgNtM+6Z2zM5WW0C1TzCWbBPND7gfKBvxoIPAAdbQd8h5P6nzwM7XFYZIO16qsZYztoEtPU
-        gI5sCLQVh12j1y1N1jtWjc6SWGTtJmhy1nH1EczQk1CTmKYGFksPMHT0ek/UGZgNYf9D/U7X7Xb8FTqs
-        zYf4JxmoM9AbJYRepeT6KJwGHaV07amu/HOOA2MgXTecoF221ujx3FszYBOjUXKiqd6w8gbaYRCuw13Q
-        VV0m6qneWqM9MVATJutxXBOmDEwZ+PNxqg9MGSkT9RxO1kuEcj7Pi1DPgfr1Ktlv4VIRl2hvCCMAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        zgAAAM4BlP6ToAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKESURBVFhH7ZdN
+        iE1hGMfP1FAaQ1NoZBoWs5iFpOwsJrEcyUpWyMJHUbJSSil2ismksbCVbLAh32IkUiSJqImNjxKKyEfX
+        73/939t7z3vupblnzGbe+jXv83+eed7/Oe+55yOrVCp1MAbgLSgYLwfyfRuRClk2DNdgxTh5AWq0Nd+7
+        iFTIshE4ldf/FcZD0OQnDBbVxKRCeQbEZ1hWVBdIhXINiNewsKhWpEL5BsQT6CqsT4SJMSBuwPSkPhFa
+        N3ALwqJ59iX1idC6gQWwtgAZG0nqE6FFA41QT/VO9ESYLAOMHtgLj+AZHCkZ9VRvrdFTZ4DRBs9Bwf9A
+        a7XFBvqciPkG52EPHIfHEOevQji699buOz7jOF97O9L6YgP9UUK8hE7lAoxdzgWWRLkT1kYdz4Vf1sRS
+        6xcjrb+qOZE3sMP6QdCt9AI8hZAfc36l/64BTbRot7V71l45ngM/rImmBtZZ3wQfrMUMOa8ruxtmwBeQ
+        uM25/Y6POd7iONDUwB2Y6VwnHILY/SrQhfsONrsu7Pslx8sdr3Z8xXGgqQHxBuR6mmt0NjT5KA20z7pn
+        bMzlZbQLVPMJZsE80PuB8oG/Ggg8AB1tB3yHk/qfPAztcVhkg7XqqxljO2gS09SAjmwItBWHXaPXLU3W
+        O1aNzpJYZO0maHLWcfURzNCTUJOYpgYWSw8wdPR6T9QZmA1h/0P9TtftdvwVOqzNh/gnGagz0BslhF6l
+        5PoonAYdpXTtqa78c44DYyBdN5ygXbbW6PHcWzNgE6NRcqKp3rDyBtphEK7DXdBVXSbqqd5aoz0xUBMm
+        63FcE6YMTBn483GqD0wZKRP1HE7WS4RyPs+LUM+B+vUq2W/hUhGXaG8IIwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
